[IMPL] DocsAPI transaction
